<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a0cecb"
    tools:context=".UserActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_marginStart="0dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo" />

    <TableLayout
        android:id="@+id/bicycleTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bicycleModel"
                android:textColor="@color/Black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="#ffffff"
                android:layout_margin="1dp"/>

            <TextView
                android:text="@string/rentalPeriod"
                android:textColor="@color/Black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="#ffffff"
                android:layout_margin="1dp"/>
            <TextView
                android:text="@string/renew"
                android:textColor="@color/Black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="#ffffff"
                android:layout_margin="1dp"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="2"
                android:text="@string/BikeModelOne"
                android:textColor="@color/Black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/rentalPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="2"
                android:text="@string/date"
                android:textColor="@color/Black"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btnRenew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="#4f97a3"
                android:text="@string/btnRenew"
                android:textColor="@color/Black"
                android:textSize="15dp" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/noBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnUnlock"
        android:layout_alignParentTop="true"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="1dp"
        android:text="@string/noBike"
        android:textColor="@color/Black"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btnUnlock"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="175dp"
        android:background="#4f97a3"
        android:text="@string/Unlock" />

</RelativeLayout>